fix(WebexMeeting): resize meeting on mobile

--- a/src/widgets/WebexMeeting/WebexMeeting.css
+++ b/src/widgets/WebexMeeting/WebexMeeting.css
@@ -1,4 +1,5 @@
 .webex-meeting-widget {
+  max-width: 100%;
   color: var(--wxc-text-color);
   display: flex;
   flex-direction: column;
